# hivegraph

./: .dockerignore  .gitignore  .readthedocs.yml  CITATION.cff  Makefile  justfile  pyproject.toml  train.py
.devcontainer/: devcontainer.json  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md
.github/codeql/: codeql-config.yml
.github/workflows/: publish-docker.yml  python-publish.yml  python.yml
docs/: README.md  conf.py  index.rst
docs/api/: augmentations.rst  automodel.rst  index.rst  utils.rst
docs/api/contrastive/: grace.rst  index.rst
docs/api/engine/: classification.rst  index.rst  trainer.rst  transductive.rst
docs/api/io/: autodataset.rst  index.rst  transforms.rst
docs/api/nn/: gcn.rst  gin.rst  index.rst
hivegraph/: augmentations.py  automodel.py  engine.py  utils.py
hivegraph/configs/: gcn.py  gin.py
hivegraph/configs/classification/: gcn.py  gin.py
hivegraph/configs/contrastive/: grace.py
hivegraph/contrastive/: __init__.py  grace.py
hivegraph/engine/: __init__.py  base.py  classification.py  trainer.py  transductive.py
hivegraph/io/: __init__.py  autodataset.py  transforms.py
hivegraph/nn/: gcn.py  gin.py
tests/: conftest.py  test_automodel.py  test_engine.py
tests/contrastive/: test_grace.py
tests/engine/: test_classfication.py  test_trainer.py  test_transductive.py
tests/io/: test_autodataset.py
tests/nn/: test_gcn.py  test_gin.py
